2011-01-17  No'am Rosenthal  <noam.rosenthal@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] Background image rendering is slow
        https://bugs.webkit.org/show_bug.cgi?id=50527

        When tiling a scaled pixmap in Image::drawPattern, scale the tile
        first and only then draw it to the target. Do so only when drawing
        more than one tile.

        Tests in fast/backgrounds/size cover this.

        * platform/graphics/qt/ImageQt.cpp:
        (WebCore::Image::drawPattern):

Canonical link: https://commits.webkit.org/66168@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@75926 268f45cc-cd09-0410-ab3c-d52691b4dbfc